Add volumeAttributesClass and map to PVC
Signed-off-by: Venkatesh Kannan <venkatesprasad512@gmail.com>

--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/040-Crd-kafka.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/040-Crd-kafka.yaml
@@ -5397,6 +5397,10 @@ spec:
                             - ephemeral
                             - persistent-claim
                             - jbod
+                          description: "Storage type, must be either 'ephemeral', 'persistent-claim', or 'jbod'."
+                        volumeAttributesClass:
+                          type: string
+                          description: Specifies `VolumeAttributeClass` name for dynamic volume allocation.
                         volumes:
                           type: array
                           items:
@@ -5436,6 +5440,10 @@ spec:
                                 enum:
                                   - ephemeral
                                   - persistent-claim
+                                description: "Storage type, must be either 'ephemeral' or 'persistent-claim'."
+                              volumeAttributesClass:
+                                type: string
+                                description: Specifies `VolumeAttributeClass` name for dynamic volume allocation.
                             required:
                               - type
                       required:
@@ -6945,6 +6953,10 @@ spec:
                           enum:
                             - ephemeral
                             - persistent-claim
+                          description: "Storage type, must be either 'ephemeral' or 'persistent-claim'."
+                        volumeAttributesClass:
+                          type: string
+                          description: Specifies `VolumeAttributeClass` name for dynamic volume allocation.
                       required:
                         - type
                     config:
