--- a/packaging/install/cluster-operator/040-Crd-kafka.yaml
+++ b/packaging/install/cluster-operator/040-Crd-kafka.yaml
@@ -5396,6 +5396,10 @@ spec:
                         - ephemeral
                         - persistent-claim
                         - jbod
+                        description: "Storage type, must be either 'ephemeral', 'persistent-claim', or 'jbod'."
+                      volumeAttributesClass:
+                        type: string
+                        description: Specifies `VolumeAttributeClass` name for dynamic volume allocation.
                       volumes:
                         type: array
                         items:
@@ -5435,6 +5439,10 @@ spec:
                               enum:
                               - ephemeral
                               - persistent-claim
+                              description: "Storage type, must be either 'ephemeral' or 'persistent-claim'."
+                            volumeAttributesClass:
+                              type: string
+                              description: Specifies `VolumeAttributeClass` name for dynamic volume allocation.
                           required:
                           - type
                     required:
@@ -6944,6 +6952,10 @@ spec:
                         enum:
                         - ephemeral
                         - persistent-claim
+                        description: "Storage type, must be either 'ephemeral' or 'persistent-claim'."
+                      volumeAttributesClass:
+                        type: string
+                        description: Specifies `VolumeAttributeClass` name for dynamic volume allocation.
                     required:
                     - type
                   config:
