Add cert-manager API classes
Signed-off-by: Katherine Stanley <11195226+katheris@users.noreply.github.com>

--- a/api/src/test/resources/crds/v1/040-Crd-kafka.yaml
+++ b/api/src/test/resources/crds/v1/040-Crd-kafka.yaml
@@ -3294,6 +3294,12 @@ spec:
                   generateCertificateAuthority:
                     type: boolean
                     description: If true then Certificate Authority certificates will be generated automatically. Otherwise the user will need to provide a Secret with the CA certificate. Default is true.
+                  type:
+                    type: string
+                    enum:
+                    - strimzi.io
+                    - cert-manager.io
+                    description: The type of certificate manager. The available types are `strimzi.io` and `cert-manager.io`. Default is `strimzi.io`.
                   generateSecretOwnerReference:
                     type: boolean
                     description: "If `true`, the Cluster and Client CA Secrets are configured with the `ownerReference` set to the `Kafka` resource. If the `Kafka` resource is deleted when `true`, the CA Secrets are also deleted. If `false`, the `ownerReference` is disabled. If the `Kafka` resource is deleted when `false`, the CA Secrets are retained and available for reuse. Default is `true`."
@@ -3311,6 +3317,36 @@ spec:
                     - renew-certificate
                     - replace-key
                     description: How should CA certificate expiration be handled when `generateCertificateAuthority=true`. The default is for a new CA certificate to be generated reusing the existing private key.
+                  certManager:
+                    type: object
+                    properties:
+                      issuerRef:
+                        type: object
+                        properties:
+                          name:
+                            type: string
+                            description: The name of the cert-manager issuer. Required.
+                          kind:
+                            type: string
+                            enum:
+                            - Issuer
+                            - ClusterIssuer
+                            description: The kind of the cert-manager issuer. Must be either `Issuer` or `ClusterIssuer`. Required.
+                          group:
+                            type: string
+                            description: The group of the cert-manager issuer. Default is `cert-manager.io`.
+                        description: Reference to the cert-manager issuer to use for issuing certificates. Required.
+                      caCert:
+                        type: object
+                        properties:
+                          secretName:
+                            type: string
+                            description: The name of the Secret. Required.
+                          certificate:
+                            type: string
+                            description: The name of the file certificate in the Secret.Required.
+                        description: Reference to the Secret containing the CA certificate (public key) that trusts certificates issued by cert-manager. Required.
+                    description: Configuration for using cert-manager to issue certificates. This only applies if the CA type is set to `cert-manager.io`.
                 description: Configuration of the cluster certificate authority.
               clientsCa:
                 type: object
@@ -3318,6 +3354,12 @@ spec:
                   generateCertificateAuthority:
                     type: boolean
                     description: If true then Certificate Authority certificates will be generated automatically. Otherwise the user will need to provide a Secret with the CA certificate. Default is true.
+                  type:
+                    type: string
+                    enum:
+                    - strimzi.io
+                    - cert-manager.io
+                    description: The type of certificate manager. The available types are `strimzi.io` and `cert-manager.io`. Default is `strimzi.io`.
                   generateSecretOwnerReference:
                     type: boolean
                     description: "If `true`, the Cluster and Client CA Secrets are configured with the `ownerReference` set to the `Kafka` resource. If the `Kafka` resource is deleted when `true`, the CA Secrets are also deleted. If `false`, the `ownerReference` is disabled. If the `Kafka` resource is deleted when `false`, the CA Secrets are retained and available for reuse. Default is `true`."
@@ -3335,6 +3377,36 @@ spec:
                     - renew-certificate
                     - replace-key
                     description: How should CA certificate expiration be handled when `generateCertificateAuthority=true`. The default is for a new CA certificate to be generated reusing the existing private key.
+                  certManager:
+                    type: object
+                    properties:
+                      issuerRef:
+                        type: object
+                        properties:
+                          name:
+                            type: string
+                            description: The name of the cert-manager issuer. Required.
+                          kind:
+                            type: string
+                            enum:
+                            - Issuer
+                            - ClusterIssuer
+                            description: The kind of the cert-manager issuer. Must be either `Issuer` or `ClusterIssuer`. Required.
+                          group:
+                            type: string
+                            description: The group of the cert-manager issuer. Default is `cert-manager.io`.
+                        description: Reference to the cert-manager issuer to use for issuing certificates. Required.
+                      caCert:
+                        type: object
+                        properties:
+                          secretName:
+                            type: string
+                            description: The name of the Secret. Required.
+                          certificate:
+                            type: string
+                            description: The name of the file certificate in the Secret.Required.
+                        description: Reference to the Secret containing the CA certificate (public key) that trusts certificates issued by cert-manager. Required.
+                    description: Configuration for using cert-manager to issue certificates. This only applies if the CA type is set to `cert-manager.io`.
                 description: Configuration of the clients certificate authority.
               cruiseControl:
                 type: object
