--- a/api/src/test/resources/crds/v1beta2/040-Crd-kafka.yaml
+++ b/api/src/test/resources/crds/v1beta2/040-Crd-kafka.yaml
@@ -2893,6 +2893,11 @@ spec:
                 properties:
                   generateCertificateAuthority:
                     type: boolean
+                  type:
+                    type: string
+                    enum:
+                    - strimzi.io
+                    - cert-manager.io
                   generateSecretOwnerReference:
                     type: boolean
                   validityDays:
@@ -2906,11 +2911,38 @@ spec:
                     enum:
                     - renew-certificate
                     - replace-key
+                  certManager:
+                    type: object
+                    properties:
+                      issuerRef:
+                        type: object
+                        properties:
+                          name:
+                            type: string
+                          kind:
+                            type: string
+                            enum:
+                            - Issuer
+                            - ClusterIssuer
+                          group:
+                            type: string
+                      caCert:
+                        type: object
+                        properties:
+                          secretName:
+                            type: string
+                          certificate:
+                            type: string
               clientsCa:
                 type: object
                 properties:
                   generateCertificateAuthority:
                     type: boolean
+                  type:
+                    type: string
+                    enum:
+                    - strimzi.io
+                    - cert-manager.io
                   generateSecretOwnerReference:
                     type: boolean
                   validityDays:
@@ -2924,6 +2956,28 @@ spec:
                     enum:
                     - renew-certificate
                     - replace-key
+                  certManager:
+                    type: object
+                    properties:
+                      issuerRef:
+                        type: object
+                        properties:
+                          name:
+                            type: string
+                          kind:
+                            type: string
+                            enum:
+                            - Issuer
+                            - ClusterIssuer
+                          group:
+                            type: string
+                      caCert:
+                        type: object
+                        properties:
+                          secretName:
+                            type: string
+                          certificate:
+                            type: string
               cruiseControl:
                 type: object
                 properties:
@@ -9515,6 +9569,11 @@ spec:
                 properties:
                   generateCertificateAuthority:
                     type: boolean
+                  type:
+                    type: string
+                    enum:
+                    - strimzi.io
+                    - cert-manager.io
                   generateSecretOwnerReference:
                     type: boolean
                   validityDays:
@@ -9528,11 +9587,38 @@ spec:
                     enum:
                     - renew-certificate
                     - replace-key
+                  certManager:
+                    type: object
+                    properties:
+                      issuerRef:
+                        type: object
+                        properties:
+                          name:
+                            type: string
+                          kind:
+                            type: string
+                            enum:
+                            - Issuer
+                            - ClusterIssuer
+                          group:
+                            type: string
+                      caCert:
+                        type: object
+                        properties:
+                          secretName:
+                            type: string
+                          certificate:
+                            type: string
               clientsCa:
                 type: object
                 properties:
                   generateCertificateAuthority:
                     type: boolean
+                  type:
+                    type: string
+                    enum:
+                    - strimzi.io
+                    - cert-manager.io
                   generateSecretOwnerReference:
                     type: boolean
                   validityDays:
@@ -9546,6 +9632,28 @@ spec:
                     enum:
                     - renew-certificate
                     - replace-key
+                  certManager:
+                    type: object
+                    properties:
+                      issuerRef:
+                        type: object
+                        properties:
+                          name:
+                            type: string
+                          kind:
+                            type: string
+                            enum:
+                            - Issuer
+                            - ClusterIssuer
+                          group:
+                            type: string
+                      caCert:
+                        type: object
+                        properties:
+                          secretName:
+                            type: string
+                          certificate:
+                            type: string
               cruiseControl:
                 type: object
                 properties:
