try with buildah
Signed-off-by: Lukas Kral <lukywill16@gmail.com>

finish

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

use buildah images instead of regex and echo

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

Changes after proposal is merged

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

add tests

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

add FG to AZP

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

change crd

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

add changelog and docs

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

change GHA

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

helm-chart

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

fix helm unittest

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

javadoc

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

update upgrade tests

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

Jakub's comments

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

add fg test and some fixups

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

spotbugs

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

different way how to write script - to fix spotbugs

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

push to insecure for FG ST Kaniko

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

try with tgz as kind has issues with mvn coords?

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

tls-verify=false for pull as well

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

Jakub's and Paolo's comments

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

:facepalm:

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

Apply suggestions from code review

Co-authored-by: PaulRMellor <47596553+PaulRMellor@users.noreply.github.com>
Signed-off-by: Lukáš Král <53821852+im-konge@users.noreply.github.com>

Paolo's comments

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

Comments from Paolo and Jakub

Sign

--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/templates/060-Deployment-strimzi-cluster-operator.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/templates/060-Deployment-strimzi-cluster-operator.yaml
@@ -110,6 +110,8 @@ spec:
               value: {{ template "strimzi.image" (set . "key" "kafkaBridge") }}
             - name: STRIMZI_DEFAULT_KANIKO_EXECUTOR_IMAGE
               value: {{ template "strimzi.image" (set . "key" "kanikoExecutor") }}
+            - name: STRIMZI_DEFAULT_BUILDAH_IMAGE
+              value: {{ template "strimzi.image" (set . "key" "buildah") }}
             - name: STRIMZI_DEFAULT_MAVEN_BUILDER
               value: {{ template "strimzi.image" (set . "key" "mavenBuilder") }}
             - name: STRIMZI_OPERATOR_NAMESPACE
