--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/values.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/values.yaml
@@ -150,6 +150,12 @@ kanikoExecutor:
     repository: ""
     name: kaniko-executor
     tag: ""
+buildah:
+  image:
+    registry: ""
+    repository: ""
+    name: buildah
+    tag: ""
 mavenBuilder:
   image:
     registry: ""
