--- a/.github/actions/systemtests/parse-comment/action.yml
+++ b/.github/actions/systemtests/parse-comment/action.yml
@@ -143,7 +143,7 @@ runs:
           const DEFAULTS = {
             pipelines:    '',
             profiles:     '',
-            featureGate:  '+DummyFeatureGate',
+            featureGate:  '+ServerSideApplyPhase1,+UseConnectBuildWithBuildah',
             rbacScope:    'CLUSTER',
             installType:  'yaml',
             parallel:     '1',
