Add support for generating certificates via cert-manager
Signed-off-by: Kate Stanley <11195226+katheris@users.noreply.github.com>

--- a/cluster-operator/pom.xml
+++ b/cluster-operator/pom.xml
@@ -103,6 +103,10 @@
             <artifactId>zjsonpatch</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.fabric8</groupId>
+            <artifactId>certmanager-model</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
         </dependency>
