Add version field to KafkaConnector and KafkaMirrorMaker2 CR
Signed-off-by: Kate Stanley <11195226+katheris@users.noreply.github.com>

--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/048-Crd-kafkamirrormaker2.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/048-Crd-kafkamirrormaker2.yaml
@@ -819,6 +819,9 @@ spec:
                           pause:
                             type: boolean
                             description: Whether the connector should be paused. Defaults to false.
+                          version:
+                            type: string
+                            description: Desired version or version range to respect when starting the Kafka Connector. This is only supported when using Kafka Connect version 4.1.0 and higher.
                           config:
                             x-kubernetes-preserve-unknown-fields: true
                             type: object
@@ -875,6 +878,9 @@ spec:
                           pause:
                             type: boolean
                             description: Whether the connector should be paused. Defaults to false.
+                          version:
+                            type: string
+                            description: Desired version or version range to respect when starting the Kafka Connector. This is only supported when using Kafka Connect version 4.1.0 and higher.
                           config:
                             x-kubernetes-preserve-unknown-fields: true
                             type: object
@@ -931,6 +937,9 @@ spec:
                           pause:
                             type: boolean
                             description: Whether the connector should be paused. Defaults to false.
+                          version:
+                            type: string
+                            description: Desired version or version range to respect when starting the Kafka Connector. This is only supported when using Kafka Connect version 4.1.0 and higher.
                           config:
                             x-kubernetes-preserve-unknown-fields: true
                             type: object
