--- a/packaging/install/cluster-operator/047-Crd-kafkaconnector.yaml
+++ b/packaging/install/cluster-operator/047-Crd-kafkaconnector.yaml
@@ -77,6 +77,9 @@ spec:
                     type: integer
                     description: "The maximum number of connector restarts that the operator will try. If the connector remains in a failed state after reaching this limit, it must be restarted manually by the user. Defaults to an unlimited number of restarts."
                 description: Automatic restart of connector and tasks configuration.
+              version:
+                type: string
+                description: Desired version or version range to respect when starting the Kafka Connector. This is only supported when using Kafka Connect version 4.1.0 and higher.
               config:
                 x-kubernetes-preserve-unknown-fields: true
                 type: object
